[SQUASH] base: Revert many commits
Revert "PixelPropUtils: Spoof google assistant to cheetah"

This reverts commit 3cde9eee036e6a2819e77faf6571aa7cc439a972.

Revert "PixelPropsUtils: Spoof remaining apps toggle [1/2]"

This reverts commit 222e8bca4c63bd40096e58104fa71de30e2347e1.

Revert "PixelPropsUtils: Switch to marlin as fallback for other apps"

This reverts commit dde48fabf4843f86e225738f265df66b5efb8d7c.

Revert "PixelPropsUtils: Switch to marlin for gms processes"

This reverts commit a3e869cca90f6cca5e79f657b710e48ff5069be7.

Revert "PixelPropsUtils: Allow Spoofing of Pixel 7 Pro for pixel devices"

This reverts commit 33fc4f0d407432126e2998b649c0c9e414efe0af.

Revert "core: Integrate and Enable Pixel features capabilities"

This reverts commit 5fe704e5cd138eaa019e9d9f3ad21f64c459672e.

Revert "core: Extend pixel experience features"

This reverts commit 7eeb77b0fb4c6462121b78c775eff74acee887e2.

Revert "PixelPropsUtils: Fix setup breakage caused by wrong filter for gms"

This reverts commit 0d5c9fcfcc1f3422d8771a7965ae5b1ba807c53a.

Revert "PixelPropsUtils: Bump Fingerprints for TQ2A"

This reverts commit db76442259906c71168591cbd5ed20fcc7d2e30a.

Revert "PixelPropsUtils: Completely spoof as walleye for snapchat"

This reverts commit f84df963cb459766c0fe5dffa8e27563b037b710.

Revert "PixelPropsUtils: Fix build fields for GMS props spoofing"

This reverts commit 481209628ff22ec9e164e81b0d1101fe25562025.

Revert "PixelPropsUtils: Convert process/package name to lowercase"

This reverts commit 20b20d08d47634bf96616a792005a9157c0942ae.